--- a/index.html
+++ b/index.html
@@ -6,6 +6,33 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My first non skidded website</title>
     <h1 class="center">now as you know im a skid</h1>
+    <style>
+      .h_iframe-aparat_embed_frame {
+        position: relative;
+      }
+      .h_iframe-aparat_embed_frame .ratio {
+        display: block;
+        width: 100%;
+        height: auto;
+      }
+      .h_iframe-aparat_embed_frame iframe {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+    </style>
+    <div class="h_iframe-aparat_embed_frame">
+      <span style="display: block; padding-top: 57%"></span
+      ><iframe
+        scrolling="no"
+        allowfullscreen="true"
+        webkitallowfullscreen="true"
+        mozallowfullscreen="true"
+        src="https://www.aparat.com/embed/live/dripofmyshirt"
+      ></iframe>
+    </div>
   </head>
   <body></body>
 </html>
