--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>My first non skidded website</title>
-    <h1 class="center">now as you know im a skid</h1>
+    <title>Live preview</title>
+    <p>click<a>lokxo.github.io/index2</a></p>
     <style>
       .h_iframe-aparat_embed_frame {
         position: relative;
