--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Live preview</title>
-    <p><a href=https://lokxo.github.io/index2>click</a></p>
+    <p><a href="https://lokxo.github.io/index2">click</a></p>
     <style>
       .h_iframe-aparat_embed_frame {
         position: relative;
