--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" type="text/css" href="styles2.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Faggots</title>
+    <h1 class="center">IM A SKID</h1>
   </head>
   <body></body>
 </html>
