--- a/index2.html
+++ b/index2.html
@@ -7,5 +7,9 @@
     <title>Faggots</title>
     <h1 class="center">IM A SKID</h1>
   </head>
-  <body></body>
+  <body>
+    <div>
+      <section></section>
+    </div>
+  </body>
 </html>
