--- a/index2.html
+++ b/index2.html
@@ -8,12 +8,12 @@
     <h1 class="center">IM A SKID</h1>
   </head>
   <body>
-    <hr />
+
     <div>
-      <section>
-        <h2 class="center">IM SIGMA</h2>
-        <p class="center">yes</p>
-        <p class="center">im sigma</p>
+      <section class="theme">
+        <h2>IM SIGMA</h2>
+        <p>yes</p>
+        <p>im sigma</p>
       </section>
     </div>
   </body>
