--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <ul class="nav-links" id="navLinks">
             <li><a href="#fun-links">Fun Links</a></li>
             <li><a href="#contact">Contact</a></li>
+            <li><a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer" aria-label="GitHub"><i class="fab fa-github"></i></a></li>
             <li><a href="#" id="theme-toggle" aria-label="Toggle Theme"><i class="fas fa-moon"></i></a></li>
         </ul>
         <div class="hamburger" id="hamburger">
@@ -31,7 +32,7 @@
         <div class="hero-content">
             <div class="text-container">
                 <h1 class="gradient-text">Welcome to MyHub</h1>
-                <p class="normal-text">Explore a collection of fun and interesting websites curated just for you.</p>
+                <p class="normal-text">Explore a curated collection of fun and interesting websites just for you.</p>
                 <button class="btn" id="get-started">Get Started</button>
             </div>
             <div class="linux-status">
@@ -76,6 +77,26 @@
                 <h3><a href="https://www.goodreads.com/" target="_blank" rel="noopener noreferrer">Goodreads</a></h3>
                 <p>Find and share book recommendations.</p>
             </div>
+            <div class="card">
+                <i class="fas fa-camera fa-3x"></i>
+                <h3><a href="https://www.unsplash.com/" target="_blank" rel="noopener noreferrer">Unsplash</a></h3>
+                <p>Browse high-quality free images.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-paint-brush fa-3x"></i>
+                <h3><a href="https://www.deviantart.com/" target="_blank" rel="noopener noreferrer">DeviantArt</a></h3>
+                <p>Showcase and discover artistic creations.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-robot fa-3x"></i>
+                <h3><a href="https://www.reddit.com/r/Fun/" target="_blank" rel="noopener noreferrer">Reddit Fun</a></h3>
+                <p>Join the fun discussions on Reddit.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-laptop-code fa-3x"></i>
+                <h3><a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">freeCodeCamp</a></h3>
+                <p>Learn to code for free.</p>
+            </div>
             <!-- Add more fun links as desired -->
         </div>
     </section>
@@ -101,7 +122,7 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2023 MyHub. All rights reserved.</p>
+        <p>&copy; 2023 MyHub. All rights reserved. | <a href="https://github.com/yourusername" target="_blank" rel="noopener noreferrer">GitHub</a></p>
     </footer>
 
     <!-- Modal Structure (If needed in future) -->
