--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <!-- Font Awesome for Icons -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnH2N2ELZByERbP3eO0+yZKYMj0jZY6jfVv5paf5QwFXHHYcSdoSXcMZ1WAWlg7hRKhb3qPkA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-p6ZGukbNzXPTn2C/GoXD+AEVg+WC/nWjDZ94Z0Bo+0t3kcEQiB7GvefvBefGpP3Gj/qw+ndcjWUvdMJ4kNcGBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <!-- Navigation Bar -->
@@ -96,6 +96,16 @@
                 <i class="fas fa-laptop-code fa-3x"></i>
                 <h3><a href="https://www.freecodecamp.org/" target="_blank" rel="noopener noreferrer">freeCodeCamp</a></h3>
                 <p>Learn to code for free.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-car fa-3x"></i>
+                <h3><a href="https://www.tesla.com/" target="_blank" rel="noopener noreferrer">Tesla</a></h3>
+                <p>Discover the future of electric vehicles.</p>
+            </div>
+            <div class="card">
+                <i class="fas fa-book-open fa-3x"></i>
+                <h3><a href="https://opentdb.com/" target="_blank" rel="noopener noreferrer">Open Trivia DB</a></h3>
+                <p>Play trivia games and test your knowledge.</p>
             </div>
             <!-- Add more fun links as desired -->
         </div>
